fix: remove redundant response fields
