# docs/swagger.json
@@ -120,12 +120,6 @@
                 },
                 "signature": {
                     "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "vhid": {
-                    "type": "string"
                 }
             }
         },
@@ -167,39 +161,6 @@
                 "password": {
                     "type": "string",
                     "example": "securepassword123"
-                },
-                "phone": {
-                    "type": "string",
-                    "example": "+998901234567"
-                },
-                "username": {
-                    "type": "string",
-                    "example": "johndoe"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "john@example.com"
-                },
-                "first_name": {
-                    "type": "string",
-                    "example": "John"
-                },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "last_name": {
-                    "type": "string",
-                    "example": "Doe"
-                },
-                "password": {
-                    "type": "string",
-                    "example": "password"
                 },
                 "phone": {
                     "type": "string",
